/* Copyright (c) 2022 Snowflake Inc. All rights reserved.

   Licensed under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.
*/

syntax = "proto3";

import "google/protobuf/descriptor.proto";

option go_package = "github.com/Snowflake-Labs/sansshell/httpoverrpc";

package HTTPOverRPC;

// The HTTPOverRPC service definition
service HTTPOverRPC {
  // Make an HTTP call to specified host
  rpc Host(HostHTTPRequest) returns (HTTPReply) {}
}

message HostHTTPRequest {
  HTTPRequest request = 1;
  // The port to use for the request on the local host.
  int32 port = 2;
  // Hostname can be specified as either an ip address or domain name
  string hostname = 3;
  // Protocols for communication like http and https 
  string protocol = 4;
}

message Header {
  string key = 1;
  repeated string values = 2 [debug_redact = true];
}

// HTTPRequest describes the HTTP request
message HTTPRequest {
  string method = 1;
  string request_uri = 2;
  repeated Header headers = 3;
  bytes body = 4;
}


// HTTPReply describes the HTTP reply
message HTTPReply {
  int32 status_code = 1;
  repeated Header headers = 2;
  bytes body = 3;
}
